--- a/Shaders/Sdf.css
+++ b/Shaders/Sdf.css
@@ -11,3 +11,29 @@ Math{
     width: 800px;
     height: 600px;
 }
+
+.home-button {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: rgba(37, 34, 34, 0.8);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+
+.home-button:hover {
+background-color: rgb(23, 21, 21);
+}
+
+.fas.fa-home{
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
+}
